[project]
name = "roco-push-console"
version = "0.1.3"
description = "Roco merchant push console with Docker scheduling and pluggable providers."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
roco-push-once = "roco_push_console.app:cli"
roco-push-scheduler = "roco_push_console.scheduler:cli"
roco-push-console = "roco_push_console.web:cli"
roco-push-service = "roco_push_console.launcher:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
roco_push_console = [
    "static/*.css",
    "static/*.js",
    "templates/*.html",
]
